tests/compile-fail/integration__integration__type_check__stackless__binop_two_strings.snap
---
source: tests/integration/type_check.rs
expression: stderr
---
error: type error
   ┌─ <input>:13:21
   │
13 │       textSet(0, 0, "F1" - "2.0");  
   │                     ^^^^ - requires a numeric type
   │                     │     
   │                     a string


